[package]
name = "mangler"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A simple Rust program that mangles and parse C++ symbol names using Itanium ABI."
repository = "https://github.com/NightProg/mangler"
homepage = "https://github.com/NightProg/mangler"
readme = "README.md"
keywords = ["mangle", "cpp", "c++", "itanium", "abi"]


[dependencies]
pest = "2.7.11"
pest_derive = "2.7.11"
